# STM32G431KB

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  book.toml  getIncludeList.sh
.devcontainer/: devcontainer.json
.github/workflows/: build-all.yml  pr-test.yml
Application/Inc/: ADC.hpp  CLI.hpp  CRC.hpp  DAC.hpp  Flash.hpp  Flash_STM32G431KB.hpp  FreeRTOSConfig.h  GPIO.hpp  Instances.hpp  LED.hpp  RTC.hpp  Serial.hpp  SerialCOM.hpp  State.hpp  StateMachine.hpp  Thread.hpp  instances.hpp  main.h
Application/Inc/boost/: sml.hpp
Application/Inc/boost/sml/utility/: dispatch_table.hpp
Application/Inc/lwshell/: lwshell.h  lwshell_opt.h
Application/Src/: ADC.cpp  CLI.cpp  CRC.cpp  DAC.cpp  Flash.cpp  Flash_STM32G431KB.cpp  GPIO.cpp  LED.cpp  RTC.cpp  SerialCOM.cpp  Thread.cpp  main.cpp
Core/: STM32G431KBTx_FLASH.ld
Core/Inc/: CLI.hpp  Flash.hpp  LED.hpp  SerialCOM.hpp  Thread.hpp  adc.h  cordic.h  crc.h  dac.h  fmac.h  instances.hpp  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h  usart.h  wwdg.h
Core/Inc/lwshell/: lwshell_opts.h
Core/Src/: CLI.cpp  Flash.cpp  LED.cpp  SerialCOM.cpp  Thread.cpp  adc.c  cordic.c  crc.c  dac.c  dma.c  fmac.c  gpio.c  iwdg.c  main.cpp  rtc.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  syscalls.c  tim.c  usart.c  wwdg.c
CubeMX/: CubeMX.ioc
Extra/: CRC.cpp
cmake/: IncludeList.cmake  IncludeList.txt  SourceList.cmake  SourceList.txt  gcc-arm-none-eabi.cmake
docs/: 404.html  ADC.html  Author.html  CLI.html  CNAME  DAC.html  Flash.html  FreeRTOS.html  LED.html  SerialUART.html  StateMachine.html  chapter_1.html  index.html  print.html  searchindex.js  searchindex.json
docs_src/page/: CLI.md  DAC.md  Flash.md  FreeRTOS.md  Introduction.md  LED.md  SUMMARY.md  SerialUART.md
